Modifiche legate alla nuova gestione del logging e delle uscite con errore.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@536 500a5620-302c-0410-bb8c-d54761bbe776

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 EXTRA_DIST = libsim.spec
 
 # Execute make in subdirs
-SUBDIRS = base log4fortran grib vol7d volgrid6d data qc termolib graphics examples doc 
+SUBDIRS = log4fortran base grib vol7d volgrid6d data qc termolib graphics examples doc 
