--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -3,9 +3,14 @@ libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 
  optional_values.f90 file_utilities.f90 geo_coord_class.F90 geo_grid_class.f90 \
  io_units.f90 kinds.F90 missing_values.f90 phys_const.f90 getopt_m.f90 \
  simple_stat.f90 geo_transforms.f90
+# Opzioni Fortran (-I... sono da considerarsi opzioni fortran
+# e non del preprocessore perche' servono per USE e non per #include)
+AM_FCFLAGS = -I../log4fortran
+
+libsim_base_la_LIBADD = ../log4fortran/liblog4fortran.la
 
 if SHP
-libsim_base_la_LIBADD = $(SHP_LIBS)
+libsim_base_la_LIBADD += $(SHP_LIBS)
 endif
 
 # c'e` una maniera migliore?
