passaggio diretto nel calcolo della td nel plot dei sondaggi
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@548 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -181,6 +181,7 @@ if test "x$enableval" = "xyes"; then
 AC_MSG_RESULT([dballe code included])
 DBALLE_LIBS="-ldballef -ldballe -lcnf -lodbc -lm"
 AC_SUBST(DBALLE_LIBS)
+AC_DEFINE(HAVE_DBALLE, 1, [Enable dballe])
 else
 AC_MSG_RESULT([dballe code not included])
 fi
