Modifiche per eliminare le patch debian: aggiunti in configure le opzioni --enable-versioninfo e --disable-doxydoc, rispettivamente per abilitare i numeri di versione nelle librerie .so e disabilitare le generazione della documentazione. La modifica relativa alle librerie .so ha richiesto modifiche ai vari LDFLAGS nei Makefile.am, collegate alle librerie ncar e oracle, da verificare.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@563 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -267,6 +267,16 @@ fi
 AM_CONDITIONAL(NETCDF, test "x$enableval" = "xyes")
 
 
+AC_ARG_ENABLE(versioninfo, AC_HELP_STRING([--enable-versioninfo],
+  [enable version information in shared libraries]),,[enableval=no])dnl default disable
+AM_CONDITIONAL(VERSIONINFO, test "x$enableval" = "xyes")
+
+
+AC_ARG_ENABLE(doxydoc, AC_HELP_STRING([--disable-doxydoc],
+  [disable generation of doxygen documentation]),,[enableval=yes])dnl default enable
+AM_CONDITIONAL(DOXYDOC, test "x$enableval" = "xyes")
+
+
 AC_LANG_POP()dnl back to C
 AC_PROG_LIBTOOL
 
