--- a/qc/Makefile.am
+++ b/qc/Makefile.am
@@ -4,6 +4,10 @@ libsim_qc_la_SOURCES = modqc.f90 modqccli.f90
 AM_FCFLAGS = -I../base -I../vol7d
 libsim_qc_la_LIBADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la
 
+if VERSIONINFO
+libsim_qc_la_LDFLAGS = -version-info @LIBSIM_VERSION_INFO@
+endif
+
 # c'e` una maniera migliore?
 tmpvar = $(libsim_qc_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
