--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libsim
 Section: contrib/science
 Priority: extra
 Maintainer: Daniele Branchini <dbranchini@arpa.emr.it>
-Build-Depends: debhelper (>= 5), autotools-dev, libemos, fortran-compiler, oracle-client-dev, libgribapi-dev, libdballepp-dev, libdballef-dev, libcnf-dev, unixodbc-dev
+Build-Depends: debhelper (>= 5), autotools-dev, libemos, fortran-compiler, oracle-client-dev, libgrib-api-dev, libdballepp-dev, libdballef-dev, libcnf-dev, unixodbc-dev
 Standards-Version: 3.7.2
 
 Package: libsim
