--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = libsim.spec
+EXTRA_DIST = libsim.spec portability/conv_cpp.sh portability/xlf.cfg
 
 # Execute make in subdirs
 SUBDIRS = log4fortran base grib vol7d volgrid6d data qc termolib graphics examples doc 
