major version change
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@580 500a5620-302c-0410-bb8c-d54761bbe776

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(libsim, 2.6.10, [dcesari@arpa.emr.it])
+AC_INIT(libsim, 3.0.0, [dcesari@arpa.emr.it])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_SRCDIR([configure.ac])
 AM_INIT_AUTOMAKE([foreign])
@@ -298,8 +298,8 @@ esac
 
 AC_LANG_POP()dnl back to C
 
-AC_ARG_ENABLE(versioninfo, AC_HELP_STRING([--enable-versioninfo],
-  [enable version information in shared libraries]),,[enableval=no])dnl default disable
+AC_ARG_ENABLE(versioninfo, AC_HELP_STRING([--disable-versioninfo],
+  [disable version information in shared libraries]),,[enableval=yes])dnl default disable
 AM_CONDITIONAL(VERSIONINFO, test "x$enableval" = "xyes")
 
 
