--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -20,8 +20,8 @@ endif
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
-char_utilities.$(OBJEXT): kinds.$(OBJEXT)
-char_utilities.lo: kinds.$(OBJEXT)
+char_utilities.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT)
+char_utilities.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT)
 datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 err_handling.$(OBJEXT): io_units.$(OBJEXT)
@@ -36,8 +36,8 @@ missing_values.$(OBJEXT): kinds.$(OBJEXT)
 missing_values.lo: kinds.$(OBJEXT)
 optional_values.$(OBJEXT): missing_values.$(OBJEXT)
 optional_values.lo: missing_values.$(OBJEXT)
-getopt_m.$(OBJEXT): err_handling.$(OBJEXT)
-getopt_m.lo: err_handling.$(OBJEXT)
+getopt_m.$(OBJEXT): err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
+getopt_m.lo: err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
 simple_stat.$(OBJEXT): missing_values.$(OBJEXT)
 simple_stat.lo: missing_values.$(OBJEXT)
 geo_transforms.$(OBJEXT): phys_const.$(OBJEXT)
