Added invariant html footer.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@607 500a5620-302c-0410-bb8c-d54761bbe776

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -25,6 +25,6 @@ clean-local:
 
 endif
 
-EXTRA_DIST = Doxyfile.in fpp mainpage.dox breve_presentazione.odp
+EXTRA_DIST = Doxyfile.in fpp mainpage.dox footer.html breve_presentazione.odp
 #SUBDIRS=pictures
 
