First implementation of v7d_transform utility, default logging redirected to stdout in order to allow v7d_transform to work on pipes.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@619 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -100,8 +100,13 @@ bin_PROGRAMS += v7d_pollini
 
 v7d_pollini_SOURCES = v7d_pollini.f90
 v7d_pollini_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
+
 endif
 
+bin_PROGRAMS += v7d_transform
+
+v7d_transform_SOURCES = v7d_transform.F90
+v7d_transform_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 
 if SHP
 noinst_PROGRAMS += esempio_geo_coordvect
@@ -154,3 +159,4 @@ vg6d_subarea_LDADD = ../volgrid6d/libsim_volgrid6d.la ../base/libsim_base.la ../
 vg6d_transform_SOURCES = vg6d_transform.f90
 vg6d_transform_LDADD = ../volgrid6d/libsim_volgrid6d.la ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 endif
+
