--- a/configure.ac
+++ b/configure.ac
@@ -303,10 +303,12 @@ AC_ARG_ENABLE(versioninfo, AC_HELP_STRING([--disable-versioninfo],
   [disable version information in shared libraries]),,[enableval=yes])dnl default disable
 AM_CONDITIONAL(VERSIONINFO, test "x$enableval" = "xyes")
 
-
 AC_ARG_ENABLE(doxydoc, AC_HELP_STRING([--disable-doxydoc],
   [disable generation of doxygen documentation]),,[enableval=yes])dnl default enable
 AM_CONDITIONAL(DOXYDOC, test "x$enableval" = "xyes")
+
+AC_CHECK_PROG(help2man, help2man, yes, no,,)
+AM_CONDITIONAL(HELP2MAN, test "x$help2man" = "xyes")
 
 AC_PROG_LIBTOOL
 
