The information about variables in Oracle is now taken from the db itself, the unit conversions are copied from db-Alle.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@730 500a5620-302c-0410-bb8c-d54761bbe776

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,9 +2,9 @@ dist_pkgdata_DATA =
 
 if ORSIM
 
-dist_bin_SCRIPTS = libsim_gen_ana_ora.sh libsim_gen_var_ora.sh
+dist_bin_SCRIPTS = libsim_gen_ana_ora.sh
 
-dist_pkgdata_DATA += varmap.csv polipciv4.dat estra_temp.dat in.grb
+dist_pkgdata_DATA += polipciv4.dat estra_temp.dat in.grb
 
 endif
 
@@ -12,4 +12,4 @@ if GRIBAPI
 dist_pkgdata_DATA += vargrib2bufr.csv
 endif
 
-EXTRA_DIST = libsim_gen_varconv_ora.py
+EXTRA_DIST = libsim_gen_var_ora.sh libsim_gen_varconv_ora.py
