Explicit dependency on log4fortran added (warning in Debian build).
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@744 500a5620-302c-0410-bb8c-d54761bbe776

--- a/qc/Makefile.am
+++ b/qc/Makefile.am
@@ -3,7 +3,7 @@ lib_LTLIBRARIES = libsim_qc.la
 libsim_qc_la_SOURCES = modqc.f90 modqccli.f90
 
 AM_FCFLAGS = -I../base -I../vol7d -I../log4fortran
-libsim_qc_la_LIBADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la
+libsim_qc_la_LIBADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 
 if VERSIONINFO
 libsim_qc_la_LDFLAGS = -version-info @LIBSIM_VERSION_INFO@
