Reordering of source lists to avoid useless recompilation.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@756 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile.am
+++ b/volgrid6d/Makefile.am
@@ -17,23 +17,26 @@ tmpvar = $(libsim_volgrid6d_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
 
-libsim_volgrid6d_la_SOURCES = grid_id_class.F90 grid_dim_class.F90 gridpar_generic_class.F90 \
- gridpar_rotated_class.F90 gridpar_polarproj_class.F90 gridpar_stretched_class.F90 \
- grid_class.F90 grid_transform_class.F90 volgrid6d_var_class.F90 \
- volgrid6d_class.F90
-
-###if GRIBAPI
-libsim_volgrid6d_la_SOURCES += gridinfo_class.F90
-libsim_volgrid6d_la_LIBADD += $(GRIBAPI_LIBS)
-###endif
+libsim_volgrid6d_la_SOURCES = grid_dim_class.F90 gridpar_generic_class.F90 \
+ gridpar_rotated_class.F90 gridpar_stretched_class.F90 gridpar_polarproj_class.F90
 
 if GDAL
 libsim_volgrid6d_la_SOURCES += gdal.f90
+endif
+
+libsim_volgrid6d_la_SOURCES += grid_id_class.F90 grid_class.F90 \
+ grid_transform_class.F90 volgrid6d_var_class.F90 gridinfo_class.F90 \
+ volgrid6d_class.F90
+
+if GRIBAPI
+libsim_volgrid6d_la_LIBADD += $(GRIBAPI_LIBS)
+endif
+
+if GDAL
 libsim_volgrid6d_la_LIBADD += $(GDAL_LIBS)
 endif
 
 if NGMATH
-#AM_LDFLAGS += $(NGMATH_LDFLAGS)
 libsim_volgrid6d_la_LIBADD += $(NGMATH_LIBS)
 libsim_volgrid6d_la_LDFLAGS += $(NCARG_LDFLAGS)
 
@@ -41,6 +44,11 @@ endif
 
 if VERSIONINFO
 libsim_volgrid6d_la_LDFLAGS += -version-info @LIBSIM_VERSION_INFO@
+endif
+
+if GDAL
+grid_id_class.o: gdal.$(OBJEXT)
+grid_id_class.lo: gdal.$(OBJEXT)
 endif
 
 grid_class.o: grid_dim_class.$(OBJEXT) gridpar_generic_class.$(OBJEXT) gridpar_rotated_class.$(OBJEXT) gridpar_stretched_class.$(OBJEXT) gridpar_polarproj_class.$(OBJEXT) grid_id_class.$(OBJEXT) ../vol7d/vol7d_distinct.F90
@@ -55,10 +63,6 @@ gridinfo_class.lo: volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT) grid_id_cl
 volgrid6d_class.o: volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT) grid_transform_class.$(OBJEXT) gridinfo_class.$(OBJEXT) grid_id_class.$(OBJEXT)
 volgrid6d_class.lo: volgrid6d_var_class.$(OBJEXT) grid_class.$(OBJEXT) grid_transform_class.$(OBJEXT) gridinfo_class.$(OBJEXT) grid_id_class.$(OBJEXT)
 
-if GDAL
-grid_id_class.o: gdal.$(OBJEXT)
-grid_id_class.lo: gdal.$(OBJEXT)
-endif
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT) *.mod
