--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,8 +1,8 @@
 lib_LTLIBRARIES = libsim_base.la
-libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 \
- optional_values.f90 file_utilities.F90 geo_coord_class.F90 \
- geo_coord_with_utm_class.F90 geo_grid_class.f90 \
- io_units.F90 kinds.F90 missing_values.f90 phys_const.f90 getopt_m.f90 \
+libsim_base_la_SOURCES = io_units.F90 kinds.F90 phys_const.f90 missing_values.f90 \
+ char_utilities.f90 err_handling.f90 datetime_class.f90 file_utilities.F90 \
+ geo_coord_class.F90 geo_coord_with_utm_class.F90 geo_grid_class.f90 \
+ optional_values.f90 getopt_m.f90 \
  simple_stat.f90 geo_transforms.f90
 # Opzioni Fortran (-I... sono da considerarsi opzioni fortran
 # e non del preprocessore perche' servono per USE e non per #include)
@@ -21,12 +21,14 @@ endif
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
+missing_values.$(OBJEXT): kinds.$(OBJEXT)
+missing_values.lo: kinds.$(OBJEXT)
 char_utilities.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT)
 char_utilities.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT)
-datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)
-datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 err_handling.$(OBJEXT): io_units.$(OBJEXT)
 err_handling.lo: io_units.$(OBJEXT)
+datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)
+datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 file_utilities.$(OBJEXT): kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT)
 file_utilities.lo: kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT)
 geo_coord_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
@@ -35,8 +37,6 @@ geo_coord_with_utm_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phy
 geo_coord_with_utm_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
 geo_grid_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT) geo_coord_with_utm_class.$(OBJEXT)
 geo_grid_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT) geo_coord_with_utm_class.$(OBJEXT)
-missing_values.$(OBJEXT): kinds.$(OBJEXT)
-missing_values.lo: kinds.$(OBJEXT)
 optional_values.$(OBJEXT): missing_values.$(OBJEXT)
 optional_values.lo: missing_values.$(OBJEXT)
 getopt_m.$(OBJEXT): err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
