New method for statistical processing of instantaneous data and corresponding example.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@762 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,13 +2,16 @@ AM_FCFLAGS = -I../base -I../grib -I../volgrid6d -I../vol7d -I../qc -I../termolib
 EXTRA_DIST = log4crc
 bin_PROGRAMS =
 
-noinst_PROGRAMS = esempio_file_utilities esempio_v7d esempio_termolib log4fortran example_getopt
+noinst_PROGRAMS = esempio_file_utilities esempio_v7d esempio_v7d_compute esempio_termolib log4fortran example_getopt
 
 esempio_file_utilities_SOURCES = esempio_file_utilities.f90
 esempio_file_utilities_LDADD = ../base/libsim_base.la
 
 esempio_v7d_SOURCES = esempio_v7d.f90
 esempio_v7d_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
+
+esempio_v7d_compute_SOURCES = esempio_v7d_compute.f90
+esempio_v7d_compute_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../log4fortran/liblog4fortran.la
 
 esempio_termolib_SOURCES  = esempio_termolib.f90 
 esempio_termolib_LDADD = ../base/libsim_base.la ../termolib/libsim_termolib.la 
