--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = io_units.F90 kinds.F90 phys_const.f90 missing_values.f90 \
- char_utilities.f90 err_handling.f90 datetime_class.f90 file_utilities.F90 \
+ char_utilities.f90 err_handling.f90 datetime_class.F90 file_utilities.F90 \
  geo_coord_class.F90 geo_coord_with_utm_class.F90 geo_grid_class.f90 \
  optional_values.f90 getopt_m.f90 \
  simple_stat.f90 geo_transforms.f90
@@ -17,6 +17,8 @@ if SHP
 libsim_base_la_LIBADD += $(SHP_LIBS)
 endif
 
+noinst_HEADERS = arrayof_pre.F90 arrayof_post.F90
+
 # c'e` una maniera migliore?
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
@@ -27,8 +29,8 @@ char_utilities.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT)
 char_utilities.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT)
 err_handling.$(OBJEXT): io_units.$(OBJEXT)
 err_handling.lo: io_units.$(OBJEXT)
-datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)
-datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT)
+datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90
+datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90
 file_utilities.$(OBJEXT): kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT)
 file_utilities.lo: kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT)
 geo_coord_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
