First but already working implementation of grib_api_csv output format for hybrid grid/sparse data.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@778 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -154,7 +154,11 @@ endif
 
 bin_PROGRAMS += vg6d_getpoint vg6d_subarea vg6d_transform
 
+if GRIBAPI
+vg6d_getpoint_SOURCES = grib_api_csv.F90 vg6d_getpoint.F90
+else
 vg6d_getpoint_SOURCES = vg6d_getpoint.F90
+endif
 vg6d_getpoint_LDADD = ../volgrid6d/libsim_volgrid6d.la  ../vol7d/libsim_vol7d.la ../base/libsim_base.la ../log4fortran/liblog4fortran.la
 
 vg6d_subarea_SOURCES = vg6d_subarea.F90
