Updatad csv format, common to dballe (but still not the default), now on a separate source file.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@841 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -108,7 +108,7 @@ endif
 
 bin_PROGRAMS += v7d_transform
 
-v7d_transform_SOURCES = v7d_transform.F90
+v7d_transform_SOURCES = v7d_csv.F90 v7d_transform.F90
 v7d_transform_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la ../volgrid6d/libsim_volgrid6d.la ../log4fortran/liblog4fortran.la
 
 if SHP
