Bug fixes and improvements for ellipsoid.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@857 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile.am
+++ b/volgrid6d/Makefile.am
@@ -35,7 +35,7 @@ endif
 
 if NGMATH
 libsim_volgrid6d_la_LIBADD += $(NGMATH_LIBS)
-libsim_volgrid6d_la_LDFLAGS += $(NCARG_LDFLAGS)
+libsim_volgrid6d_la_LDFLAGS += $(NGMATH_LDFLAGS)
 
 endif
 
