--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = io_units.F90 kinds.F90 phys_const.f90 missing_values.f90 \
  char_utilities.f90 err_handling.f90 datetime_class.F90 optional_values.f90 file_utilities.F90 \
  geo_coord_class.F90 geo_coord_with_utm_class.F90 geo_grid_class.f90 \
- getopt_m.f90 \
+ optionparser_class.F90 \
  simple_stat.f90 geo_proj_class.F90
 
 # Opzioni Fortran (-I... sono da considerarsi opzioni fortran
@@ -42,8 +42,8 @@ geo_coord_with_utm_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phy
 geo_coord_with_utm_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
 geo_grid_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT) geo_coord_with_utm_class.$(OBJEXT)
 geo_grid_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT) geo_coord_with_utm_class.$(OBJEXT)
-getopt_m.$(OBJEXT): err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
-getopt_m.lo: err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
+optionparser_class.$(OBJEXT): err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
+optionparser_class.lo: err_handling.$(OBJEXT) kinds.$(OBJEXT) char_utilities.$(OBJEXT)
 simple_stat.$(OBJEXT): missing_values.$(OBJEXT)
 simple_stat.lo: missing_values.$(OBJEXT)
 geo_transforms.$(OBJEXT): phys_const.$(OBJEXT)
