renamed utilities module in array_utilities moved include file in base
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@879 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -42,7 +42,7 @@ endif
 
 noinst_HEADERS = vol7d_class_type_templ.F90 vol7d_class_desc_templ.F90 \
 vol7d_oraclesim_class_vartable.F90 \
-vol7d_distinct.F90 vol7d_class_diff.F90 vol7d_class_diff_only.F90 \
+vol7d_class_diff.F90 vol7d_class_diff_only.F90 \
 vol7d_dballe_class_nana.f90 vol7d_dballe_class_ndati.f90 \
 vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
 vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 vol7d_dballe_class_var_du.f90
