--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = io_units.F90 kinds.F90 phys_const.f90 missing_values.f90 \
- char_utilities.f90 err_handling.f90 datetime_class.F90 optional_values.f90 file_utilities.F90 utilities.F90 \
+ char_utilities.f90 err_handling.f90 datetime_class.F90 array_utilities.F90 optional_values.f90 file_utilities.F90 \
  geo_coord_class.F90 geo_coord_with_utm_class.F90 geo_grid_class.f90 \
  optionparser_class.F90 \
  simple_stat.f90 geo_proj_class.F90
@@ -18,7 +18,7 @@ if SHP
 libsim_base_la_LIBADD += $(SHP_LIBS)
 endif
 
-noinst_HEADERS = arrayof_pre.F90 arrayof_post.F90
+noinst_HEADERS = arrayof_pre.F90 arrayof_post.F90 array_utilities_inc.F90 arrayof_pre_nodoc.F90 arrayof_post_nodoc.F90 
 
 # c'e` una maniera migliore?
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
@@ -35,6 +35,8 @@ datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT) arrayo
 datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT) arrayof_pre.F90 arrayof_post.F90
 file_utilities.$(OBJEXT): kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT) optional_values.$(OBJEXT)
 file_utilities.lo: kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT) optional_values.$(OBJEXT)
+array_utilities.$(OBJEXT): datetime_class.$(OBJEXT) array_utilities_inc.F90
+array_utilities.lo: datetime_class.$(OBJEXT) array_utilities_inc.F90
 geo_coord_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
 geo_coord_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
 geo_coord_with_utm_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
